# repo2prompt

./: .gitignore  README.md  pyproject.toml
repo2prompt/: main.py
