[tool.poetry]
name = "repo2prompt"
version = "0.1.0"
description = ""
authors = ["Tomas Jelinek <tomgolf.jelinek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
repo2prompt = "main.py:main"
